--- a/with_firebase/package.json
+++ b/with_firebase/package.json
@@ -10,20 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/app": "^17.4.3",
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-firebase/database": "^17.4.2",
+    "@react-native-menu/menu": "^0.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/base": "github:react-native-elements/react-native-elements#base",
+    "@rneui/themed": "github:react-native-elements/react-native-elements#themed",
     "date-fns": "^2.29.3",
+    "firebase": "^9.21.0",
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-flash-message": "^0.4.1",
     "react-native-modal": "^13.0.1",
-    "react-native-safe-area-context": "^4.5.1",
+    "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-router-native": "^6.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
