--- a/with_firebase/package.json
+++ b/with_firebase/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^17.4.3",
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-firebase/database": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.3",
     "@react-native-menu/menu": "^0.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
